# IMock

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  README.md
.github/workflows/: build.yml  docker-test.yml
include/: CallCount.hpp  IMock.hpp  IReturnValue.hpp  Method.hpp  Mock.hpp  MockCaseCallCount.hpp  MockCaseID.hpp  MockWithArguments.hpp  MockWithID.hpp  MockWithMethod.hpp  when.hpp
include/exception/: MockException.hpp  MockWithArgumentsUsedTwiceException.hpp  UnknownCallException.hpp  UnmockedCallException.hpp  WrongCallCountException.hpp
include/internal/: Apply.hpp  Case.hpp  CaseMatch.hpp  CaseMatchFactory.hpp  ICase.hpp  IMockMethodNonGeneric.hpp  IReturnValue.hpp  InnerMock.hpp  JoinStrings.hpp  MockCaseMutableCallCount.hpp  MockMethod.hpp  MockWithArguments.hpp  MockWithArgumentsCase.hpp  MockWithMethodCase.hpp  MutableCallCount.hpp  ToString.hpp  UnknownCall.hpp  VirtualOffset.hpp  VirtualOffsetContext.hpp  VirtualOffsetReference.hpp  VirtualTable.hpp  VirtualTableOffset.hpp  VirtualTableOffsetContext.hpp  VirtualTableOffsetReference.hpp  makeUnique.hpp  make_unique.hpp  union_cast.hpp
singleHeader/: IMock.hpp
test/script/: lcovFilter.cpp  mergeHeaders.cpp
test/src/: IMock.cpp  IMockSecondary.cpp
